--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+/.project
+
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
