--- a/.env
+++ b/.env
@@ -1,22 +1,22 @@
-APP_NAME=Laravel
+APP_NAME="Command"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rPI+ygjdRIC7cK+pcJAvzDtBckCGTgwOt+q/tUeJtN8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL="http://127.0.0.1:8000"
 
 LOG_CHANNEL=stack
-LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST="127.0.0.1"
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=command
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -27,11 +27,9 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_USERNAME=9632ac46b8ecb7
+MAIL_PASSWORD=aded5e1a95cb5c
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
